# GOIT_python_web_module6_hw

./: README.md  hw6.db  pyproject.toml  seeds.py  select1.sql  select10.sql  select2.sql  select3.sql  select4.sql  select5.sql  select6.sql  select7.sql  select8.sql  select9.sql  selects.py
